--- a/content/posts/初/初.md
+++ b/content/posts/初/初.md
@@ -4,23 +4,25 @@ date: 2025-11-27
 draft: false
 summary: 关于这个网站的由来
 tags:
-  - 心路历程
-categories:
+  - 记录
+categories: 心路历程
 ---
 本博客的第一篇文章。
 # 一、为什么写博客
+
 ## 从github开始
 故事要从这里开始说起：
 
 开始使用github之后不久，我在机缘巧合之下找到了阮一峰的[科技爱好者周刊](https://github.com/ruanyf/weekly)。当时的我就像是在一片浩瀚的海域中发现宝藏的旅人。怀着激动的心情，我如饥似渴地阅读起来。我还记得那一期是[# 科技爱好者周刊（第 369 期）：Tim 与罗永浩的对谈](https://github.com/ruanyf/weekly/blob/master/docs/issue-369.md)。
 
-![[科技爱好者周刊（第 369 期）：Tim 与罗永浩的对谈.png]]
+![](科技爱好者周刊（第%20369%20期）：Tim%20与罗永浩的对谈.png)
 
 我还没有看过Tim和罗永浩的这期视频，但也已经有所耳闻。文中总结的对谈内容让我感到受益匪浅。
 
 但真正催生写博客这个念头的，是下面推荐的一篇文章。
 ## 菠萝油与天光墟
-![[破解加拿大航空的飞机上网.png]]
+![](破解加拿大航空的飞机上网.png)
+
 
 [关于破解加拿大航空飞机网络限制的一件小事 | 菠萝油与天光墟](https://ramsayleung.github.io/zh/post/2025/%E5%85%B3%E4%BA%8E%E7%A0%B4%E8%A7%A3%E5%8A%A0%E6%8B%BF%E5%A4%A7%E8%88%AA%E7%A9%BA%E9%A3%9E%E6%9C%BA%E7%BD%91%E7%BB%9C%E9%99%90%E5%88%B6%E7%9A%84%E4%B8%80%E4%BB%B6%E5%B0%8F%E4%BA%8B/)
 
@@ -36,10 +38,11 @@ categories:
 
 所以，我为什么不也写点什么呢？
 
-就这样，[一人行者](https://gloomist805.github.io/Blog/)诞生了。![[Pasted image 20251127224946.png]]
+就这样，[一人行者](https://gloomist805.github.io/Blog/)诞生了。
 
+![](Pasted%20image%2020251127224946.png)
 # 二、阻碍随之而来
-![[Pasted image 20251127225136.png]]
+![](Pasted%20image%2020251127225136.png)
 ## 一拖再拖
 如你所见，本文在obsidian中的创建时间是2025年11月17日，而我敲下这行字的时间是10天后的夜晚。显然，我把它搁置了不短的时间。
 
